-
Bug
-
Resolution: Done
-
P1: Critical
-
5.8.0 Alpha
-
None
-
048447346bc1b78992be3ce4bf3292fc272f7e1a
It's missing, at a minimum, out-of-line special member functions (dtor, copy/move ctor/assignment op) and Q_DECLARE_TYPEINFO, otherwise the indicated extension by a d-pointer will not be possible.
It should also have the full set of relational operators and a qHash() overload. IDs should be regular and fit as keys for associative containers.
The numeric() function is probably not a good idea when more complex ID schemata need to be used. If it stays, I guess the Qt name would be value().